changes related to main page and request page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
     </button> -->
     <span>Process Manager</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon face-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>face</mat-icon>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
     </button>
   </mat-toolbar>
