--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,8 @@
 // @import './styles/variables.scss';
 
+*{
+    color: white;
+}
 :host::ng-deep .face-icon {
     background: transparent;
     border: none;
