--- a/src/app/components/add-process/add-process.component.html
+++ b/src/app/components/add-process/add-process.component.html
@@ -1,41 +1,112 @@
-<div>
-    <h2 mat-dialog-title>Add New Process</h2>
-    <mat-dialog-content>
-        <form [formGroup]="addProcessForm">
+<!-- <div> -->
+  <h2 mat-dialog-title>Add Recipients</h2>
+  <mat-dialog-content>
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+      <form [formGroup]="addProcessForm" style="width:100%">
+        <div fxLayout="column" >
+          <div fxLayout="column"
+            [ngStyle]="{ height: recipientsObj.length > 0 ? '90px' : '0px' }"
+            class="recipient-div">
+            <div fxLayout="row" *ngFor="let recipients of recipientsObj ;let i = index">
+            <span
+              class="added-recipients">
+              {{ recipients.no + "." + " " + recipients.recipientName + "<" + recipients.recipientEmail + ">" }}</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="delete-recipient-button" (click)="deleteRecipient(i)"><circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line></svg>
+              </div>
+          </div>
+          <div fxLayout="row" fxLayoutAlign=" center">
             <mat-form-field appearance="fill" class="form-field">
-                <mat-label>
-                    Process Name
-                </mat-label>
-                <input matInput placeholder="Enter process name" formControlName="processName" />
+              <mat-label> First Name </mat-label>
+              <input
+                matInput
+                placeholder="First name"
+                formControlName="firstName"
+              />
             </mat-form-field>
             <mat-form-field appearance="fill" class="form-field">
-                <mat-label>
-                    Description
-                </mat-label>
-                <input matInput placeholder="Enter description" formControlName="description" />
+              <mat-label> Last Name </mat-label>
+              <input
+                matInput
+                placeholder="Last name"
+                formControlName="lastName"
+              />
             </mat-form-field>
             <mat-form-field appearance="fill" class="form-field">
-                <mat-label>
-                    Primary Client Email
-                </mat-label>
-                <input matInput placeholder="Enter email" formControlName="primaryEmail" />
+              <mat-label> Email </mat-label>
+              <input matInput placeholder="Email" formControlName="email" />
             </mat-form-field>
-            <mat-form-field appearance="fill" class="form-field">
-                <mat-label>
-                    Due Date
-                </mat-label>
-                <input matInput [matDatepicker]="dp1" formControlName="dueDate">
-                <mat-datepicker-toggle matSuffix [for]="dp1"></mat-datepicker-toggle>
-                <mat-datepicker #dp1></mat-datepicker>
-            </mat-form-field>
-        </form>
-    </mat-dialog-content>
-    <mat-dialog-actions fxLayout="row" fxLayoutAlign="end">
-        <button mat-raised-button (click)="dialogRef.close(false)" class="add-process-btn">
-            Close
-        </button>
-        <button mat-raised-button class="add-process-btn" (click)="createProcess(addProcessForm.value)">
-            Create
-        </button>
-    </mat-dialog-actions>
-</div>
+            <button
+              mat-raised-button
+              class="add-recipient-btn"
+              (click)="addRecipient(addProcessForm.value)"
+            >
+              Add
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <table
+      #recipientTable
+      mat-table
+      [dataSource]="userData"
+      class="mat-elevation-z8 processTable"
+    >
+      <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- No Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.recipient }}</td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.requester }}</td>
+      </ng-container>
+
+      <!-- Delete Column -->
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            matTooltip="Click to Delete"
+            class="iconbutton"
+          >
+            <mat-icon>delete_outline</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="element-row"
+        (click)="rowClicked(row)"
+      ></tr>
+    </table>
+  </mat-dialog-content>
+  <mat-dialog-actions
+    fxLayout="row"
+    fxLayoutAlign="space-between center"
+    style="padding-left: 5%; padding-right: 5%"
+  >
+    <button
+      mat-raised-button
+      (click)="dialogRef.close(false)"
+      class="add-process-btn"
+    >
+      Close
+    </button>
+    <button
+      mat-raised-button
+      class="add-process-btn"
+      (click)="createProcess(addProcessForm.value)"
+    >
+      Save
+    </button>
+  </mat-dialog-actions>
+<!-- </div> -->
