--- a/src/app/components/add-process/add-process.component.scss
+++ b/src/app/components/add-process/add-process.component.scss
@@ -1,8 +1,49 @@
 .form-field {
-    width: 100%;
+    padding: 1%;
+    height: 75px;
+    width: 25%;
 }
 
 .add-process-btn {
     background-color: #627ffc;
     padding: 1px;
+    color: white !important;
+    margin-right: -3%;
+    margin-bottom: 2%;
+    margin-left: -3%;
+    width: 15%;
 }
+.add-recipient-btn{
+    background-color: #627ffc;
+    padding: 1px;
+    color: white !important;
+        width: 10%;
+    margin-right: -1%;
+    margin-bottom: 2%;
+    margin-left: 5%;
+}
+
+.element-row {
+    position: relative;
+    cursor: pointer;
+}
+
+.added-recipients{
+    font-size: 13px;
+    color: black;
+    padding-bottom: 1%;
+    margin-right: 1%;
+}
+
+.recipient-div{
+    position: relativ;
+    overflow: auto;
+}
+
+.delete-recipient-button{
+    color: black;
+    cursor: pointer;
+}
+
+
+
