--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,9 +3,9 @@
     <mat-card>
         <mat-card-header class="mat-card-header" fxLayout="row" fxLayoutAlign="space-between center">
             <mat-card-title>Your Processes</mat-card-title>
-            <button mat-button class="example-icon add-button" aria-label="Example icon-button with heart icon"
+            <button mat-button class="example-icon add-button" matTooltip="Click to Add Requests" aria-label="Example icon-button with heart icon"
                 align="end" (click)="addProcess()">
-                <mat-icon>person_add</mat-icon>
+                + Create Request
             </button>
         </mat-card-header>
         <table #processTable mat-table [dataSource]="processData" class="mat-elevation-z8 processTable">
@@ -14,27 +14,21 @@
               The actual rendered columns are set as a property on the row definition" -->
 
             <!-- No Column -->
-            <ng-container matColumnDef="no">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.no}} </td>
+            <ng-container matColumnDef="requestName">
+                <th mat-header-cell *matHeaderCellDef> Request Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.requestName}} </td>
             </ng-container>
 
             <!-- Process Name Column -->
-            <ng-container matColumnDef="processName">
-                <th mat-header-cell *matHeaderCellDef> Process Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.processName}} </td>
+            <ng-container matColumnDef="recipient">
+                <th mat-header-cell *matHeaderCellDef> Recipient </th>
+                <td mat-cell *matCellDef="let element"> {{element.recipient}} </td>
             </ng-container>
 
             <!-- Description Column -->
-            <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Description </th>
-                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-            </ng-container>
-
-            <!-- Email Column -->
-            <ng-container matColumnDef="primaryEmail">
-                <th mat-header-cell *matHeaderCellDef> Email </th>
-                <td mat-cell *matCellDef="let element"> {{element.primaryEmail}} </td>
+            <ng-container matColumnDef="requester">
+                <th mat-header-cell *matHeaderCellDef> Requester </th>
+                <td mat-cell *matCellDef="let element"> {{element.requester}} </td>
             </ng-container>
 
             <!-- Due Date Column -->
@@ -43,10 +37,18 @@
                 <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
             </ng-container>
 
+            <!-- Delete Column -->
+            <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef>  </th>
+                <td mat-cell *matCellDef="let element"> <button mat-icon-button matTooltip="Click to Delete" class="iconbutton"
+                    (click)="deleteRow(element)" >
+                    <mat-icon>delete_outline</mat-icon>
+                  </button> </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row" (click)="rowClicked(row)">
             </tr>
         </table>
     </mat-card>
-
 </div>
+<app-add-requests style="display:none;" (recipientData) = "setRecipientData($event)"></app-add-requests>
