--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* Add application styles & imports to this file! */
 // @import './styles/variables.scss';
+@import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 
 html,
 body {
@@ -10,3 +11,8 @@ body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+*:not(mat-icon){
+    font-family: 'Montserrat' !important;
+}
+
